cmake_minimum_required(VERSION 3.14)
project(CPrimeplus)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPrimeplus main.cpp
        14th/student/student.cpp 14th/student/use_stuc.cpp 14th/student/studentc.h
        13th/brass/brass.cpp 13th/brass/brass.h
        13th/DMA/dma.cpp 13th/DMA/dma.h
        13th/tabletennis/tablenn1.cpp 13th/tabletennis/tablenn1.h
        12th/String/sayings1.cpp 12th/String/sayings2.cpp 12th/String/string1.cpp 12th/String/string1.h
        12th/queue/bank.cpp 12th/queue/queue.cpp 12th/queue/queue.h
        12th/placenew/palcenew1.cpp
        10th/practice1/stacker.cpp 10th/practice1/Stack.h 10th/practice1/Stack.cpp
        10th/stock/stock20.cpp 10th/stock/stock20.h 10th/stock/usestock2.cpp
        9th/practice1/coordin.h 9th/practice1/file1.cpp 9th/practice1/file2.cpp)